--- a/style.scss
+++ b/style.scss
@@ -177,10 +177,10 @@ article > nav {
 	padding: 0 5px 10px;
 	a {
 		text-decoration: none;
-		background-color: $mainBack;
-		@include dark-mode {
-			background-color: $mainDBack;
-		}
+//		background-color: $mainBack;
+//		@include dark-mode {
+//			background-color: $mainDBack;
+//		}
 	}
 	p {
 		padding: 0.8em 0 0.2em;
@@ -254,12 +254,12 @@ blockquote {
 		background-color: $blockDBack;
 	}
 
-	a {
-		background-color: $blockBack;
-		@include dark-mode {
-			background-color: $blockDBack;
-		}
-	}
+//	a {
+//		background-color: $blockBack;
+//		@include dark-mode {
+//			background-color: $blockDBack;
+//		}
+//	}
 }
 
 img {
