--- a/_includes/lang.tags.html
+++ b/_includes/lang.tags.html
@@ -7,7 +7,7 @@
         {% if include.short!=nil %}
           {{ item.emoj }}
         {% else %}
-          {{ comma }}<a href="{{ item.link }}">{{ item.emoj }}{{ item.titl }}</a>{% assign comma = "," %}
+          {{ comma }}<a href="{{ langpath }}/{{ item.name }}/">{{ item.emoj }}{{ item.titl }}</a>{% assign comma = "," %}
           {% capture tagcommas %}{{ tagcommas }}{{ comma2 }}{{ item.name }}{% endcapture %}{% assign comma2 = "," %}
         {% endif %}
       {% endif %}
