--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -5,7 +5,7 @@ layout: default
 <article class="page">
 {% include tags.html %}
 <header><div class="header headerblack">
-	<h1>{{ tag_emoji }} {{ tag_title }}</h1>
+	<h1>{{ tag_emoji }}&nbsp;{{ tag_title }}</h1>
 </div></header>
 <div class="entry">
 	{{ tag_subtitle | markdownify }}
