--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -3,6 +3,6 @@
 <nav class="tags">
 {% for item in site.data.main.[taglist] %}
 {% capture taglink %}{{ langpath }}/tag/{{ item.name }}/{% endcapture %}
-<a href="{{ taglink }}" title="{{ item.tit2 }}" {% if taglink == page.url %}class="bold"{% assign tag_name = item.name %}{% assign tag_title = item.titl %}{% assign tag_subtitle = item.tit2 %}{% assign tag_emoji = item.emoj %}{% endif %}>{{ item.emoj }}{{ item.titl }}</a>
+<a href="{{ taglink }}" title="{{ item.tit2 }}" {% if taglink == page.url %}class="bold"{% assign tag_name = item.name %}{% assign tag_title = item.titl %}{% assign tag_subtitle = item.tit2 %}{% assign tag_emoji = item.emoj %}{% endif %}>{{ item.emoj }}&nbsp;{{ item.titl }}</a>
 {% endfor %}
 </nav>
