--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,8 @@
 <link rel="alternate" type="application/rss+xml" title="{{ site.data.main.[pagetitle] }}" href="{{ site.url }}{{ langpath }}/atom.xml" />
 <link rel="icon" type="image/png" href="{{ site.avatar }}">
 
+<script src="https://hello.michael.team/script.js"></script>
+
 {% if page.js %}
 <script type="text/javascript" src="{{ site.url }}/js/scripts.js"></script>
 </head><body onload="{{ page.js }}();">
