--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,11 +60,17 @@
 <script src="https://hello.michael.team/script.js"></script>
 
 {% if page.js %}
+{% if page.js == "refresh" %}
+<meta http-equiv="Refresh" content="60; url=https://michael.team/" />
+<script type="text/javascript" src="{{ site.url }}/js/redirect.js"></script>
+{% else %}
 <script type="text/javascript" src="{{ site.url }}/js/scripts.js"></script>
+{% endif %}
 </head><body onload="{{ page.js }}();">
 {% else %}
 </head><body>
 {% endif %}
+
 <div class="begend" id="top">
 	<div class="begender">
 		<a href="{{ site.url }}/{{ langpath }}" class="avatar" title="{{ site.data.main.[pagetitle] }}"><img src="/icon.dark.png" alt="MS"></a>
