fixes to redirect

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
 <script src="https://hello.michael.team/script.js"></script>
 
 {% if page.js %}
-{% if page.js == "refresh" %}
+{% if page.js == "redirect" %}
 <meta http-equiv="Refresh" content="60; url=https://michael.team/" />
 <script type="text/javascript" src="{{ site.url }}/js/redirect.js"></script>
 {% else %}
