--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,6 +71,10 @@
 </head><body>
 {% endif %}
 
+{% if site.data.main.ad == 'true' %}
+{% include ad.html %}
+{% endif %}
+
 <div class="begend" id="top">
 	<div class="begender">
 		<a href="{{ site.url }}/{{ langpath }}" class="avatar" title="{{ site.data.main.[pagetitle] }}"><img src="/icon.dark.png" alt="MS"></a>
