--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -9,16 +9,19 @@ layout: page
 {% assign currentYear = site.time | date: '%Y' %}
 {% include lang.months.html %}
 
+<br>
+
 <nav class="tags">
 <a href="#2020">2020</a> |
-<a href="#2020">2019</a> |
-<a href="#2020">2018</a>
+<a href="#2019">2019</a> |
+<a href="#2018">2018</a> |
+<a href="#2017">2017</a>
 </nav>
 
 {% assign postsByYear = site.categories.[langlang] | group_by_exp:"post", "post.date | date: '%Y'" %}
 {% for year in postsByYear %}
 
-<h2><a name="{{ year.name }}">{{ year.name }}</a></h2>
+<h2 id="{{ year.name }}">{{ year.name }}</h2>
   {% if langlang == 'en' %}
     {% assign postsByMonth = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
   {% else %}
