Added meta tags for apple itunes podcasts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,10 @@
 <meta property="og:site_name" content="{{ site.name }}" />
 <meta name="twitter:site" content="@MSliwinski"/>
 
+{% if page.head %}
+{{ page.head }}
+{% endif %}
+
 <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
