--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,9 +48,9 @@
 <meta property="og:type" content="article" />
 <meta property="og:site_name" content="{{ site.name }}" />
 <meta name="twitter:site" content="@MSliwinski"/>
-
-{% if page.head %}
 {{ page.head }}
+{% if page.podcast %}
+<meta name="apple-itunes-app" content="app-id={{ page.podcast }}" />
 {% endif %}
 
 <!--[if lt IE 9]>
