--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,9 +14,6 @@ layout: default
 <footer>
 	{% include lang.date.html date=page.date %}
 	<div class="date">{{ langdate }}</div>
-	{% capture share %}share{{ langvar }}{% endcapture %}
-	{% capture tweet %}sharet{{ langvar }}{% endcapture %}
-	<h3>{{ site.data.main.[share] }}: <a href="{{ site.url }}{{ page.url }}">{{ site.data.main.domain }}{{ page.url }}</a></h3>
-	<h4><a href="https://twitter.com/intent/tweet?text={{ page.title }}&via={{ site.data.main.twitter }}&url={{ site.url }}{{ page.url }}&hashtags={{ tagcommas }}">{{ site.data.main.[tweet] }}</a></h4>
+	{% include share.html tweet=true %}
 </footer>
 </article>
