fixes styles ajax

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,7 @@ layout: default
 </div>
 {% if page.name!="index.md" %}
 <footer>
-	{% include share.html tweet=true %}
+	{% include share.html %}
 </footer>
 {% endif %}
 </article>
