--- a/style.scss
+++ b/style.scss
@@ -48,7 +48,7 @@ a {
 }
 
 article > footer {
-	padding: 20px;
+	padding-bottom: 20px;
 }
 
 #ajax {
@@ -290,7 +290,7 @@ img {
 @keyframes spinner {
 	to {transform: rotate(360deg);}
 }
- 
+
 #spinner {
 	width: 200px;
 	padding: 30px;
