--- a/style.scss
+++ b/style.scss
@@ -109,6 +109,11 @@ article > footer {
 	text-align: center;
 }
 
+.column {
+	float: right;
+	width: 50%;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 	line-height: 1.3em;
