--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -16,7 +16,8 @@ layout: page
 <a href="#2019">2019</a> |
 <a href="#2018">2018</a> |
 <a href="#2017">2017</a> |
-<a href="#2016">2016</a>
+<a href="#2016">2016</a> |
+<a href="#2015">2015</a>
 {% else %}
 <a href="#2020">2020</a> |
 <a href="#2019">2019</a> |
