--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="page" id="page">
-{% if page.cover %}<header style="background: url('{{ site.url }}/img/{{ page.cover }}') center center / cover no-repeat; min-height: 400px;"><div class="header">{% else %}<header><div class="header headerblack">{% endif %}
+{% if page.cover %}<header style="background: url('{{ site.url }}/img/{{ page.cover }}') center center / cover no-repeat; min-height: 400px;"><div class="header">{% else %}<header><div class="headerblack">{% endif %}
 	{% if page.header %}{{ page.header }}{% else %}
 	<h1>{{ page.title }}</h1>
 	{% if page.subtitle %}<h2>{{ page.subtitle }}</h2>{% endif %}
