--- a/style.scss
+++ b/style.scss
@@ -42,7 +42,7 @@ a {
 	}
 }
 
-.begender, .header, .entry, article > nav, article > footer {
+.begender, .entry, article > nav, article > footer {
 	max-width: 700px;
 	margin: auto;
 }
@@ -143,21 +143,26 @@ h4 {
 .header {
 	text-align: center;
 	color: $textW;
+	margin: auto auto 0px;
+	background-color: rgb(0, 0, 0, 0.5);
 	a {
 		text-decoration: none;
 		color: $textW;
 	}
 	h1, h2, h3 {
 		text-shadow: 2px 2px 4px $textB;
+		margin: 0 5px;
 	}
 }
 
 .headerblack {
+	text-align: center;
 	color: $textB;
 	@include dark-mode {
 		color: $textW;
 	}
 	a {
+		text-decoration: none;
 		color: $textB;
 		@include dark-mode {
 			color: $textW;
@@ -172,7 +177,8 @@ h4 {
 }
 
 header {
-	padding: 1em 0;
+	/* padding: 1em 0; */
+	display: flex;
 }
 
 input, button {
