--- a/style.scss
+++ b/style.scss
@@ -144,7 +144,7 @@ h4 {
 	text-align: center;
 	color: $textW;
 	margin: auto auto 0px;
-	background-color: rgb(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.5);
 	a {
 		text-decoration: none;
 		color: $textW;
