--- a/style.scss
+++ b/style.scss
@@ -88,6 +88,34 @@ article > footer {
 	}
 }
 
+.container {
+	margin: 10px 0px;
+	font-size: 0.8em;
+}
+
+.left {
+	float: right;
+	width: 50%;
+	padding-left: 20px;
+	@include mobile {
+		float: none;
+		width: 100%;
+		padding-left: 0px;
+	}
+}
+
+.right {
+	float: right;
+	width: 50%;
+	padding-bottom: 20px;
+	@include mobile {
+		float: none;
+		width: 100%;
+	}
+}
+
+
+
 .avatar {
 	float: left;
 	width: 75px;
