more fixes newsletter

--- a/_includes/email.html
+++ b/_includes/email.html
@@ -9,7 +9,7 @@
 <input type="submit" value="Join and get free books!"/>
 </form>
 
-<p class="date"><a href="/privacy/">Respectful privacy and GDPR</a>: No spam. One monthly email. Unsubscribe anytime.</p>
+<p class="date"><a href="/privacy/">Privacy and GDPR</a>: No spam. One monthly email. Unsubscribe anytime.</p>
 
 <!-- TODO: enable dark mode for both of these messages -->
 <!-- TODO: send first newsletter to tell people about the change to michael.team and No Office book and unsubscribe if they don't want to hear from me -->
