fixing share and adding email newsletter at the bottom of each page

--- a/style.scss
+++ b/style.scss
@@ -250,7 +250,7 @@ article > nav {
 }
 
 .footnotes {
-	border-top: 1px solid $textG;
+	border-top: 1px solid $main;
 	p, li {
 		font-size: 0.9rem;
 	}
