--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,8 +13,15 @@ layout: default
 	{{ content }}
 </div>
 {% if page.name!="index.md" %}
-<footer>
-	{% include share.html %}
-</footer>
+	{% if page.share!="no" %}
+	<footer>
+		{% include share.html %}
+	</footer>
+	{% endif %}
+	{% if page.email!="no" %}
+	<div class="footnotes">
+	{% include email.html %}
+	</div>
+	{% endif %}
 {% endif %}
 </article>
