--- a/_includes/share.html
+++ b/_includes/share.html
@@ -5,8 +5,15 @@
 {% else %}
 {% assign slug = page.name | remove_first: ".md" %}
 {% endif %}
+{% if page.share!="noshow" %}
 <h3>{{ site.data.main.[share] }}: <a href="{{ site.url }}{{ page.url }}">{{ site.data.main.domain }}{{ langpath }}/{{ slug }}</a></h3>
-{% if include.tweet %}
-{% capture tweet %}sharet{{ langvar }}{% endcapture %}
-<h4><a href="https://twitter.com/intent/tweet?text={{ page.title }}&via={{ site.data.main.twitter }}&url={{ site.url }}{{ page.url }}&hashtags={{ tagcommas }}">{{ site.data.main.[tweet] }}</a></h4>
+	{% if include.tweet %}
+	{% capture tweet %}sharet{{ langvar }}{% endcapture %}
+	<h4><a href="https://twitter.com/intent/tweet?text={{ page.title }}&via={{ site.data.main.twitter }}&url={{ site.url }}{{ page.url }}&hashtags={{ tagcommas }}">{{ site.data.main.[tweet] }}</a></h4>
+	{% endif %}
+{% endif %}
+{% if page.email!="noshow" %}
+<div class="footnotes">
+{% include email.html %}
+</div>
 {% endif %}
