Last fixes newsletter

--- a/_includes/email.html
+++ b/_includes/email.html
@@ -1,4 +1,4 @@
-<p class="date">Hi, I'm Michael Sliwinski, the host of this site. Enjoying my writing? Subscribe to my monthly newsletter and I'll send you two of my books "It's All About Passion" and "No Office Apps":</p>
+<p class="date">Hi, I'm Michael Sliwinski, the host of this site. Enjoying my writing? Subscribe to my monthly newsletter and I'll send you digital copies of two of my books "It's All About Passion" and "No Office Apps":</p>
 
 <form action="https://nozbe.info/add_subscriber.html" accept-charset="utf-8" method="post"><div class="flex-box"><div class="flex-left">
 <input type="text" name="name" placeholder="Name"/></div><div class="flex-right">
