--- a/_includes/ad.html
+++ b/_includes/ad.html
@@ -2,6 +2,6 @@
 Inserting an AD site-wide - just put site.data.main.ad to true
 {% endcomment %}
 <div class="begend" id="ad" style="padding: 15px 0px;">
-	<div class="begender center"><p>🥳 ✅ <a href="{{ site.data.main.ad_link }}">{{ site.data.main.ad_text }}</a> 🙏 👍</p>
+	<div class="begender center"><p>🥳 ✅ <a href="{{ site.data.main.ad_link }}">{{ site.data.main.ad_text | markdownify }}</a> 🙏 👍</p>
 	</div>
 </div>
