--- a/_includes/ad.html
+++ b/_includes/ad.html
@@ -1,7 +1,7 @@
 {% comment %}
 Inserting an AD site-wide - just put site.data.main.ad to true
 {% endcomment %}
-<div class="begend" id="ad" style="padding: 15px 0px;">
+<div class="begend" style="padding: 15px 0px;">
 	<div class="begender center"><p>🥳 ✅ <a href="{{ site.data.main.ad_link }}">{{ site.data.main.ad_text }}</a> 🙏 👍</p>
 	</div>
 </div>
