--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,6 +1,6 @@
 <div class="embed-container">
   <iframe
-      src="https://www.youtube-nocookie.com/embed/{{ include.id }}?autoplay=0&controls=0&rel=0&modestbranding=1"
+      src="https://www.youtube-nocookie.com/embed/{{ include.id }}?autoplay=0&controls=0&wmode=transparent&rel=0&modestbranding=1"
       width="853"
       height="480"
       frameborder="0"
