--- a/_includes/tags.post.html
+++ b/_includes/tags.post.html
@@ -4,9 +4,9 @@
 {%- for tag in include.tags -%}
 {%- assign item = site.data.main.[taglist] | where: "name", tag -%}
 {%- if include.short!=nil -%}
- {{ item.emoj }}
+{{ item.emoj }}
 {%- else -%}
- {{ comma }}<a href="{{ langpath }}/{{ item.name }}/">{{ item.emoj }}{{ item.titl }}</a>{%- assign comma = "," -%}
+{{ comma }}<a href="{{ langpath }}/{{ item.name }}/">{{ item.emoj }}{{ item.titl }}</a>{% assign comma = "," %}
 {%- endif -%}
 {%- endfor -%}
 {%- endif -%}
