--- a/_includes/tags.post.html
+++ b/_includes/tags.post.html
@@ -1,13 +1,17 @@
-2
+3
 {% if include.tags.size>0 %}
-{% if langvar==nil %}{% include lang.html %}{% endif %}
-{% capture taglist %}tags{{ langvar }}{% endcapture %}
-{% for tag in include.tags %}
-{% assign item = site.data.main.[taglist] | where: "name", tag %}
-{% if include.short!=nil %}
-{{ item.emoj }}
-{% else %}
-{{ comma }}<a href="{{ langpath }}/{{ item.name }}/">{{ item.emoj }}{{ item.titl }}</a>{% assign comma = "," %}
-{% endif %}
-{% endfor %}
-{% endif %}
+  {% if langvar==nil %}{% include lang.html %}{% endif %}
+  {% capture taglist %}tags{{ langvar }}{% endcapture %}
+  {% for tag in include.tags %}
+    {% for item in site.data.main.[taglist] %}
+      {% if tag==item.name %}
+        {% if include.short!=nil %}
+          {{ item.emoj }}
+        {% else %}
+          {{ comma }}<a href="{{ langpath }}/{{ item.name }}/">{{ item.emoj }}{{ item.titl }}</a>{% assign comma = "," %}
+          {% capture tagcommas %}{{ tagcommas }}{{ comma2 }}{{ item.name }}{% endcapture %}{% assign comma2 = "," %}
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+  {% endfor %}
+  {% endif %}
