--- a/_includes/tags.post.html
+++ b/_includes/tags.post.html
@@ -1,4 +1,4 @@
-7
+8
 {% if include.tags.size>0 %}
 {% if langvar==nil %}{% include lang.html %}{% endif %}
 {% capture taglist %}tags{{ langvar }}{% endcapture %}
@@ -6,7 +6,7 @@
 {% for item in site.data.main.[taglist] %}
 {% if tag==item.name %}
 {% if include.short!=nil %}
-{{ item.emoj -}}
+{{- item.emoj -}}
 {% else %}
 {{ comma }}<a href="{{ langpath }}/{{ item.name }}/">{{ item.emoj }}{{ item.titl }}</a>{% assign comma = "," %}
 {% capture tagcommas %}{{ tagcommas }}{{ comma2 }}{{ item.name }}{% endcapture %}{% assign comma2 = "," %}
