--- a/_includes/tags.post.html
+++ b/_includes/tags.post.html
@@ -1,5 +1,5 @@
 8
-{% if include.tags.size>0 %}
+{% if include.tags.size>0 -%}
 {% if langvar==nil %}{% include lang.html %}{% endif %}
 {% capture taglist %}tags{{ langvar }}{% endcapture %}
 {% for tag in include.tags %}
@@ -10,8 +10,8 @@
 {% else %}
 {{ comma }}<a href="{{ langpath }}/{{ item.name }}/">{{ item.emoj }}{{ item.titl }}</a>{% assign comma = "," %}
 {% capture tagcommas %}{{ tagcommas }}{{ comma2 }}{{ item.name }}{% endcapture %}{% assign comma2 = "," %}
-{% endif %}
-{% endif %}
-{% endfor %}
-{% endfor %}
-{% endif %}
+{% endif -%}
+{% endif -%}
+{% endfor -%}
+{% endfor -%}
+{% endif -%}
