--- a/_includes/tags.post.html
+++ b/_includes/tags.post.html
@@ -1,7 +1,7 @@
-9
+10
 {% if include.tags.size>0 -%}
-{% if langvar==nil %}{% include lang.html %}{% endif %}
-{% capture taglist %}tags{{ langvar }}{% endcapture %}
+{% if langvar==nil %}{% include lang.html %}{% endif -%}
+{% capture taglist %}tags{{ langvar }}{% endcapture -%}
 {% for tag in include.tags -%}
 {% for item in site.data.main.[taglist] -%}
 {% if tag==item.name -%}
@@ -9,7 +9,7 @@
 {{- item.emoj -}}
 {% else -%}
 {{ comma }}<a href="{{ langpath }}/{{ item.name }}/">{{ item.emoj }}{{ item.titl }}</a>{% assign comma = "," %}
-{% capture tagcommas %}{{ tagcommas }}{{ comma2 }}{{ item.name }}{% endcapture %}{% assign comma2 = "," %}
+{% capture tagcommas %}{{ tagcommas }}{{ comma2 }}{{ item.name }}{% endcapture %}{% assign comma2 = "," -%}
 {% endif -%}
 {% endif -%}
 {% endfor -%}
