--- a/_layouts/atom.html
+++ b/_layouts/atom.html
@@ -16,7 +16,7 @@ layout: nil
     <rights>Copyright (c) 2008-{{ site.time | date: '%Y' }} {{ site.data.main.[pagename] }}</rights>
     {% for post in site.categories.[page.lang] limit:20 %}
     <entry xml:lang="{{ page.lang }}">
-        <title>{{ post.title }}</title>
+        <title>{% include tags.post.html tags=post.tags short="true" %} {{ post.title }}</title>
         <link href="{{ site.url }}{{ post.url }}"/>
         <updated>{{ post.date | date_to_xmlschema }}</updated>
         <id>{{ site.url }}{{ post.url }}</id>
