--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 {% if page.cover %}<header style="background: url('{{ site.url }}/img/{{ page.cover }}') center center / cover no-repeat; min-height: 400px;"><div class="header">{% else %}<header><div class="headerblack">{% endif %}
 	<h1>{{ page.title }}</h1>
 	{% if page.subtitle %}<h2>{{ page.subtitle }}</h2>{% endif %}
-	<h3>{% include lang.tags.html tags=page.tags %}</h3>
+	<h3>{% include tags.post.html tags=page.tags %}</h3>
 </div></header>
 <div class="entry">
 	{{ content }}
