--- a/_layouts/searchposts.html
+++ b/_layouts/searchposts.html
@@ -9,6 +9,7 @@ layout: nil
       "title"    : "{{ post.title | escape }}",
       "tags"     : "{{ post.tags | join: ', ' }}",
       "url"      : "{{ post.url }}",
+      "emoji"    : "{% include tags.post.html tags=post.tags short="true" %}",
       "date"     : "{{ post.date }}"
       {% comment %}We can add here later descriptions (excerpts), tag names or tag icons (or put tag data in a different JSON) and post.img (main images of posts){% endcomment %}
     }
