--- a/_includes/tags.post.html
+++ b/_includes/tags.post.html
@@ -7,7 +7,7 @@
 {% for item in site.data.main.[taglist] -%}
 {% if tag==item.name -%}
 {% if include.short!=nil -%}
-{{ comma }}{{ item.emoj }}{% assign comma = "&nbsp;" -%}
+{{ comma }}{{ item.emoj }}{% assign comma = " " -%}
 {% else -%}
 {{ comma }}<a href="{{ langpath }}/{{ item.name }}/">{{ item.emoj }}{{ item.titl }}</a>{% assign comma = "," -%}
 {% capture tagcommas %}{{ tagcommas }}{{ comma2 }}{{ item.name }}{% endcapture %}{% assign comma2 = "," -%}
