--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
 <link rel="stylesheet" type="text/css" href="{{ site.url }}/style.css" />
 <link rel="alternate" type="application/rss+xml" title="{{ site.data.main.[pagetitle] }}" href="{{ site.url }}{{ langpath }}/atom.xml" />
 <link rel="icon" type="image/png" href="{{ site.avatar }}">
-
+<base target="_parent">
 <script src="https://hello.michael.team/script.js"></script>
 
 {% if page.js %}
