--- a/_includes/share.html
+++ b/_includes/share.html
@@ -3,7 +3,7 @@
 {% if page.slug %}{% assign slug = page.slug %}{% else %}{% assign slug = page.name | remove_first: ".md" %}{% endif %}
 {% capture sharelink %}{{ site.url }}{{ page.url }}{% endcapture %}
 {% capture sharelink_name %}{{ site.data.main.domain }}{{ langpath }}/{{ slug }}{% endcapture %}
-{% for tag in page.tags %}{% if tag == "podcast" %}{% assign altslug = slug | replace: "podcast-", "" %}{% capture sharelink %}{{ site.data.main.url_podcast }}{{ altslug }}{% endcapture %}{% capture sharelink_name %}{{ site.data.main.url_podcast_name }}{{ altslug }}{% endcapture %}{% endif %}{% endfor %}
+{% for tag in page.tags %}{% if tag == "podcast" %}{% assign altslug = slug | replace: "podcast-", "" %}{% capture sharelink %}{{ site.data.main.url_podcast }}{{ altslug }}{% endcapture %}{% capture sharelink_name %}{{ site.data.main.url_podcast_name }}/{{ altslug }}{% endcapture %}{% endif %}{% endfor %}
 {% if slug == "podcast" %}{% capture sharelink %}{{ site.data.main.url_podcast }}{% endcapture %}{% capture sharelink_name %}{{ site.data.main.url_podcast_name }}{% endcapture %}{% endif %}
 {% if page.share!="noshow" %}
 <h3>{{ site.data.main.[share] }}: <a href="{{ sharelink }}">{{ sharelink_name }}</a></h3>
