--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,8 +1,10 @@
 {% if langvar==nil %}{% include lang.html %}{% endif %}
 {% capture taglist %}tags{{ langvar }}{% endcapture %}
+{% capture tagsall %}tagsall{{ langvar }}{% endcapture %}
 <nav class="tags">
 {% for item in site.data.main.[taglist] %}
 {% capture taglink %}{{ langpath }}/{{ item.name }}/{% endcapture %}
 <a href="{{ taglink }}" title="{{ item.tit2 }}" {% if taglink == page.url %}class="bold"{% assign tag_name = item.name %}{% assign tag_title = item.titl %}{% assign tag_subtitle = item.tit2 %}{% assign tag_emoji = item.emoj %}{% endif %}>{{ item.emoj }}&nbsp;{{ item.titl }}</a>
 {% endfor %}
 </nav>
+{% if tag_name == nil %}{% assign tag_title = site.data.main.[tagsall] %}{% assign tag_emoji = site.data.main.tagsallemoji %}{% endif %}
