--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,8 +61,7 @@
 <link rel="alternate" type="application/rss+xml" title="{{ site.data.main.[pagetitle] }}" href="{{ site.url }}{{ langpath }}/atom.xml" />
 <link rel="icon" type="image/png" href="{{ site.avatar }}">
 <base target="_parent">
-<script src="https://hello.michael.team/script.js"></script>
-
+<script src="https://hello.michael.team/script.js" async></script>
 {% if page.js %}
 {% if page.js == "redirect" %}
 <meta http-equiv="Refresh" content="60; url=https://michael.team/" />
