--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,7 +1,7 @@
 <div class="embed-container">
 <iframe
 	src="https://www.youtube-nocookie.com/embed/{{ include.id }}?start={{ include.start | default: 0 }}&autoplay=0&rel=0&modestbranding=1"
-	srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube-nocookie.com/embed/{{ include.id }}?start={{ include.start | default: 0 }}&autoplay=0&rel=0&modestbranding=1><img src=https://img.youtube.com/vi/{{ include.id }}/maxresdefault.jpg><span>▶</span></a>"
+	srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube-nocookie.com/embed/{{ include.id }}?start={{ include.start | default: 0 }}&autoplay=0&rel=0&modestbranding=1><img src=https://img.youtube.com/vi/{{ include.id }}/hqdefault.jpg><span>▶</span></a>"
 	width="853"
 	height="480"
 	frameborder="0"
