--- a/style.scss
+++ b/style.scss
@@ -261,6 +261,10 @@ article > nav {
 	font-style: italic;
 }
 
+.small {
+	font-size: smaller;
+}
+
 ul, ol {
 	margin: 15px 0;
 	padding-left: 30px;
