--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="page" id="page">
 {% include tags.html %}
-<header><div class="header headerblack">
+<header><div class="headerblack">
 	<h1>{{ tag_emoji }} {{ tag_title }}</h1>
 </div></header>
 
