--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,9 +83,7 @@
 	</div>
 </div>
 
-{% if site.data.main.ad == 'true' %}
-{% include ad.html %}
-{% endif %}
+{% if site.data.main.ad == 'true' %}{% include ad.html %}{% endif %}
 
 {{ content }}
 
