moving date to post content from footer

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,10 +10,11 @@ layout: default
 </div></header>
 <div class="entry">
 	{{ content }}
+
+	{% include lang.date.html date=page.date %}
+	<div class="date">{{ langdate }} <a href="{{ site.url }}{{ page.url}}" class="small">{{ page.url}}</a></div>
 </div>
 <footer>
-	{% include lang.date.html date=page.date %}
-	<div class="date">{{ langdate }}</div>
 	{% include share.html tweet=true %}
 </footer>
 </article>
