previous next in blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,3 +18,6 @@ layout: default
 	{% include share.html tweet=true %}
 </footer>
 </article>
+<script type="text/javascript">
+	getPrevNext('{{ page.url}}');
+</script>
