--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,5 +19,6 @@ layout: default
 </footer>
 </article>
 <script type="text/javascript">
+	getRelated('{{ page.url}}');
 	getPrevNext('{{ page.url}}');
 </script>
