--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -2,15 +2,18 @@
 layout: default
 ---
 
-<article class="page">
-<div class="entry">
-	{% include book.html %}
-</div>
-<header><div class="header headerblack">
+<article class="page" id="page">
+<header>
+
+{% include book.html %}
+
+<div class="headerblack">
 	<h1>{{ page_chname }} - {{ page.title }}</h1>
 	<h2>{{ page.subtitle }}</h2>
 </div></header>
 <div class="entry">
+
+	
 	{{ content }}
 </div>
 <footer>
