--- a/style.scss
+++ b/style.scss
@@ -236,9 +236,9 @@ article > nav {
 		padding: 0.8em 0 0.2em;
 		font-size: 1.2em;
 	}
-	ul, ol {
-		font-size: 1.2rem;
-	}
+//	ul, ol {
+//		font-size: 1.2rem;
+//	}
 	img + em {
 		color: $textG;
 		display: block;
