--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -3,17 +3,13 @@ layout: default
 ---
 
 <article class="page" id="page">
+<div class="entry">{% include book.html %}</div>
 <header>
-
-{% include book.html %}
-
 <div class="headerblack">
 	<h1>{{ page_chname }} - {{ page.title }}</h1>
 	<h2>{{ page.subtitle }}</h2>
 </div></header>
 <div class="entry">
-
-	
 	{{ content }}
 </div>
 <footer>
