--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{{ page.book }} | {{ page.slug }}
+
 <article class="page" id="page">
 <div class="entry">{% include book.html %}</div>
 <header>
