--- a/style.scss
+++ b/style.scss
@@ -269,6 +269,10 @@ article > nav {
 	font-size: smaller;
 }
 
+.book_nav {
+	padding: 10px 0px;
+}
+
 ul, ol {
 	margin: 15px 0;
 	padding-left: 30px;
