--- a/_includes/book_toc.html
+++ b/_includes/book_toc.html
@@ -7,9 +7,8 @@
   {% assign chapter_part = slug %}
   {% endif %}
 {% endfor %}
-
-<h2>{% if item.status == "none" %}{{ item.chname }}{% else %}<a href="{{ site.baseurl }}/{{ site.data.[thisbook].url }}/{{ item.url }}">{{ item.chname }} - {{ chapter_title }}{% if item.status == "draft" %} {{ site.data.[thisbook].draft }}{% endif %}</a>{% endif %}</h2>
-<p>{% if item.status == "none" %}{{ site.data.[thisbook].none }}{% else %}{{ chapter_subtitle }}{% endif %}</p>
+<ul>
+<li><strong>{% if item.status == "none" %}{{ item.chname }}{% else %}<a href="{{ site.baseurl }}/{{ site.data.[thisbook].url }}/{{ item.url }}">{{ item.chname }} - {{ chapter_title }}{% if item.status == "draft" %} {{ site.data.[thisbook].draft }}{% endif %}</a>{% endif %}</strong><br>{% if item.status == "none" %}{{ site.data.[thisbook].none }}{% else %}{{ chapter_subtitle }}{% endif %}
 <ul>
 {% for entry in item.chapters %}
 {% for slug in slugs %}
@@ -22,6 +21,6 @@
 <li><strong>{% if entry.status == "none" %}{{ entry.chname }}{% else %}<a href="{{ site.baseurl }}/{{ site.data.[thisbook].url }}/{{ entry.url }}">{{ entry.chname }} - {{ chapter_title }}{% if entry.status == "draft" %} {{ site.data.[thisbook].draft }}{% endif %}</a>{% endif %}</strong><br />
     {% if entry.status == "none" %}{{ site.data.[thisbook].none }}{% else %}{{ chapter_subtitle }}{% endif %}</li>
 {% endfor %}
-</ul>
+</ul></li></ul>
 {% endfor %}
 </div>
