--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,12 @@
 <html><head>
 {% include lang.html %}{% capture pagetitle %}title{{ langvar }}{% endcapture %}{% capture pagetitleshort %}titleshort{{ langvar }}{% endcapture %}{% capture pagedescr %}descr{{ langvar }}{% endcapture %}{% capture pagename %}name{{ langvar }}{% endcapture %}{% capture pagelocale %}locale{{ langvar }}{% endcapture %}
 
-<title>{% if page.title %}{{ page.title }} – {{ site.data.main.[pagetitleshort] }}{% else %}{{ site.data.main.[pagetitle] }}{% endif %}</title>
+{% if page.book %}
+	{% assign thisbook = page.book %}
+	{% capture descbook %}book{{ langvar }}{% endcapture %}
+{% endif %}
+
+<title>{% if page.title %}{{ page.title }}{% if thisbook %} - {{ site.data.main.[descbook] }} - {{ site.data.[thisbook].title }}{% endif %} – {{ site.data.main.[pagetitleshort] }}{% else %}{{ site.data.main.[pagetitle] }}{% endif %}</title>
 
 <meta charset="utf-8" />
 <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
