--- a/_includes/book_next.html
+++ b/_includes/book_next.html
@@ -1,9 +1,8 @@
-
-<div class="booknav">
-
-{% if next_got == true %}
-<p class="bold">{{ site.data.[thisbook].continue }} <a href="{{ site.baseurl }}/{{ site.data.[thisbook].url }}/{{ next_url }}">{{ next_chname }} - {{ next_title }}</a></p>
-{% endif %}
-
-<p><a href="{{ site.baseurl }}/{{ site.data.[thisbook].url }}/">{{ site.data.[thisbook].back }}</a></p>
+<div class="book_nav">
+	{% if next_got == true %}
+	<p class="bold">{{ site.data.[thisbook].continue }} <a href="{{ site.baseurl }}/{{ site.data.[thisbook].url }}/{{ next_url }}">{{ next_chname }} - {{ next_title }}</a></p>
+	{% endif %}
+</div>
+<div class="book_nav">
+	<p><a href="{{ site.baseurl }}/{{ site.data.[thisbook].url }}/">{{ site.data.[thisbook].back }}</a></p>
 </div>
