--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -13,12 +13,14 @@ layout: page
 <br><nav class="tags">
 {% if langlang == 'en' %}
 <a href="#2021">2021</a> |
+<a href="#2020">2020</a> |
 <a href="#2019">2019</a> |
 <a href="#2018">2018</a> |
 <a href="#2017">2017</a> |
 <a href="#2016">2016</a> |
 <a href="#2015">2015</a> |
-<a href="#2014">2014</a>
+<a href="#2014">2014</a> |
+<a href="#2013">2013</a>
 {% else %}
 <a href="#2021">2021</a> |
 <a href="#2020">2020</a> |
