--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -22,7 +22,8 @@ layout: page
 <a href="#2014">2014</a> |
 <a href="#2013">2013</a> |
 <a href="#2012">2012</a> |
-<a href="#2011">2011</a>
+<a href="#2011">2011</a> |
+<a href="#2010">2010</a>
 {% else %}
 <a href="#2021">2021</a> |
 <a href="#2020">2020</a> |
