--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -24,7 +24,8 @@ layout: page
 <a href="#2012">2012</a> |
 <a href="#2011">2011</a> |
 <a href="#2010">2010</a> |
-<a href="#2009">2009</a>
+<a href="#2009">2009</a> |
+<a href="#2008">2008</a>
 {% else %}
 <a href="#2021">2021</a> |
 <a href="#2020">2020</a> |
