updates LI sizes and updates to yearly review and nooffice

--- a/style.scss
+++ b/style.scss
@@ -236,8 +236,8 @@ article > nav {
 		padding: 0.8em 0 0.2em;
 		font-size: 1.2em;
 	}
-	ul, ol {
-		font-size: 1.1em;
+	ul, ol, li {
+		font-size: 1.2em;
 	}
 	img + em {
 		color: $textG;
