--- a/style.scss
+++ b/style.scss
@@ -237,7 +237,7 @@ article > nav {
 		font-size: 1.2em;
 	}
 	ul, ol, li {
-		font-size: 1.2em;
+		font-size: 1.2rem;
 	}
 	img + em {
 		color: $textG;
